# smart-product-recommendation-assistant

./: .gitignore  README.md  requirements.txt
backend/: .env.example  .gitignore  __init__.py  config.py  explanation_generator.py  list_models.py  llm_extractor.py  main.py  memory.py  metadata_filter.py  models.py  prompts.py  rag_pipeline.py  recommender.py  requirements.txt  response_generator.py
data/: config.py  ecommerce_products_killer.csv  ingest.py  main.py  pyproject.toml  requirements.txt
frontend/: app.py  components.py  styles.py
